syntax="proto3";
package proto;
option go_package="./pb";

service User {
  rpc Login(LoginRequest) returns (LoginResponse){}
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  uint64 id = 1;
  int64 number = 2;
  string plate = 3;
  string status = 4;
  string route = 5;
  bool is_active = 6;
  string token = 7;
}
